<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="grzechu16.todolistm.AddToDoTask">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/specify_task"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textViewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_of_your_task"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/type_here_hint"
        />

    <TextView
        android:id="@+id/textViewTaskDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTaskTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/description"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/textViewTaskTitle"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/type_here_hint" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTaskDesc"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/set_date_button"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDesc"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="41dp"
        android:text="@string/dd_mm_yyyy"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/checkBoxDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDate"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/is_done"
        android:textSize="20dp"
        android:visibility="invisible"
        android:enabled="false"
        />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/add_task_button"/>


</RelativeLayout>
